// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`infobarActions.shopify.editOrder actions onLineItemChange() should edit the payload with the first product quantity set to 6 1`] = `
Array [
  Object {
    "loading": true,
    "message": "Calculating edit order...",
    "type": "infobarActions/shopify/editOrder/SET_LOADING",
  },
  Object {
    "calculatedEditOrder": Immutable.Map {
      "calculatedOrderId": "123456789",
      "total_line_items_price": "140.0",
      "current_total_tax": "10.15",
      "current_total_price": "152.08",
      "paid_by_customer": "50",
      "amount_to_collect": "152.08",
      "has_changes": true,
    },
    "type": "infobarActions/shopify/editOrder/SET_CALCULATED_EDIT_ORDER",
  },
  Object {
    "payload": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "10.00",
      },
      "shipping_line": null,
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "currency": "USD",
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "variant_inventory_management": "shopify",
          "taxable": true,
          "admin_graphql_api_id": "gid://shopify/LineItem/4193100136471",
          "vendor": "storegorgias3",
          "price": "1.00",
          "quantity": 6,
          "tax_lines": Immutable.List [
            Immutable.Map {
              "rate": 0.2,
              "price": "0.20",
              "title": "TVA",
              "price_set": Immutable.Map {
                "shop_money": Immutable.Map {
                  "amount": "0.2",
                  "currency_code": "USD",
                },
                "presentment_money": Immutable.Map {
                  "amount": "0.2",
                  "currency_code": "USD",
                },
              },
            },
          ],
          "product_id": 8345093387,
          "name": "Acidulous candy - Red / A",
          "price_set": Immutable.Map {
            "shop_money": Immutable.Map {
              "amount": "1.0",
              "currency_code": "USD",
            },
            "presentment_money": Immutable.Map {
              "amount": "1.0",
              "currency_code": "USD",
            },
          },
          "product_exists": true,
          "fulfillable_quantity": 1,
          "properties": Immutable.List [],
          "fulfillment_status": null,
          "fulfillment_service": "manual",
          "discount_allocations": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "id": 4193100136471,
          "grams": 10,
          "total_discount": "0.00",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "gift_card": false,
          "total_discount_set": Immutable.Map {
            "shop_money": Immutable.Map {
              "amount": "0.0",
              "currency_code": "USD",
            },
            "presentment_money": Immutable.Map {
              "amount": "0.0",
              "currency_code": "USD",
            },
          },
          "requires_shipping": true,
        },
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
        "admin_graphql_api_id": "gid://shopify/Customer/2721145061399",
      },
    },
    "type": "infobarActions/shopify/editOrder/SET_PAYLOAD",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/editOrder/SET_LOADING",
  },
]
`;

exports[`infobarActions.shopify.editOrder actions onLineItemChange() should edit the payload with the removed product line 1`] = `
Array [
  Object {
    "loading": true,
    "message": "Calculating edit order...",
    "type": "infobarActions/shopify/editOrder/SET_LOADING",
  },
  Object {
    "calculatedEditOrder": Immutable.Map {
      "calculatedOrderId": "123456789",
      "total_line_items_price": "140.0",
      "current_total_tax": "10.15",
      "current_total_price": "152.08",
      "paid_by_customer": "50",
      "amount_to_collect": "152.08",
      "has_changes": true,
    },
    "type": "infobarActions/shopify/editOrder/SET_CALCULATED_EDIT_ORDER",
  },
  Object {
    "payload": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "4.00",
      },
      "shipping_line": null,
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "currency": "USD",
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
        "admin_graphql_api_id": "gid://shopify/Customer/2721145061399",
      },
    },
    "type": "infobarActions/shopify/editOrder/SET_PAYLOAD",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/editOrder/SET_LOADING",
  },
]
`;
